fixed duplicate styles by removing the duplicates. fixed spacing issues on group management page.

--- a/src/components/ModalLogOut/style.css
+++ b/src/components/ModalLogOut/style.css
@@ -3,7 +3,7 @@
     border: solid orange;
     color: #ff0000;
     border-radius: 30rem;
-    margin: 32px;
+    margin: 8px;
 }
 
 .modal-background {
